# mini-siem

./: .gitignore  README.md  pyproject.toml
examples/: submit_suricata
src/mini_siem/: __init__.py  models.py  parser.py
