[project]
name = "mini-siem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.1",
    "lark>=1.2.2",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]

[project.scripts]
hello = "mini_siem:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.379",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4",
]
